feat:新增获取激励语的逻辑
