# docs/swagger.yaml
@@ -123,8 +123,6 @@ definitions:
     type: object
   response.TaskWithChecks:
     properties:
-      checks:
-        type: integer
       completed:
         type: boolean
       details:
@@ -139,7 +137,7 @@ definitions:
       token:
         type: string
       user_id:
-        type: integer
+        type: string
     type: object
   response.URL:
     properties:
@@ -650,6 +648,38 @@ paths:
               type: object
         "400":
           description: 设备号不能为空 或 其他错误
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 获取激励语
+      tags:
+      - 标语
+  /slogan/SearchSlogan:
+    get:
+      consumes:
+      - application/json
+      description: 用户获取激励语
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.PostGoalResponse'
+              type: object
+        "400":
+          description: 解析失败
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: 用户未授权
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 服务器错误
           schema:
             $ref: '#/definitions/response.Response'
       summary: 获取激励语
